# RawOpticalHarvest

./: .gitignore  Cargo.toml  TeminalTries_2024-02-02.txt  readme.md  run.sh
.github/workflows/: release.yml
demo/: cahuca_2023-2024_DG_checkin_2024-01-26 - cahuca_2023-2024_DG_checkin_2024-01-26.csv  casfjazz.csv  file with spaces.csv  multiple_ids.csv  nonequal_grant_cycle.csv  nonequal_marc.csv  out_exists.csv  simple_column_tester.csv
src/: agent.rs  cli.rs  integration_tests.rs  lib.rs  main.rs  test.rs
src/cli_handler/: linux.rs  macos.rs  mod.rs
src/csv_processor/: all_rows_filled.rs  csv_processor.rs  equal_column.rs  error.rs  first_value.rs  mod.rs  path_validator.rs  populated_column.rs  row_printer.rs
src/csv_processor/common/: header_searcher.rs  mod.rs  path_reader.rs
