[package]
name = "carroh"
version = "0.1.0"
authors = ["David Zwerdling <zwerdlds@gmail.com>"]
edition = "2021"
description = "California Revealed Raw Optical Harvest"

[dependencies]
assert_cmd = "2.0.13"
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
csv = "1.3.0"
env_logger = "0.11.1"
inquire = "0.6.2"
log = "0.4.20"
tempfile = "3.9.0"
